<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_logout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".LogoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="155dp"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/fragment_logout_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/regis_after"
            android:text="@string/fragment_logout_xac_nhan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/fragment_logout_content"
            android:textColor="#747070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="52dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/fragment_huy"
            android:text="@string/fragment_logout_huy"
            android:textColor="@color/regis_after"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>