<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_blank"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_main_mtDangKy"
        android:layout_width="475dp"
        android:layout_height="65dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="-2dp"
        android:background="@drawable/shape"
        android:contextClickable="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_registration_iv_back"
        android:layout_width="67dp"
        android:layout_height="62dp"
        android:contentDescription="@string/quay_lai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_back_adaptive_fore" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/activity_registration_dang_ky"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_registration_iv_back"
        app:layout_constraintTop_toTopOf="@+id/activity_main_mtDangKy" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_mtDangKy">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/activity_registration_ten_day_du"
                android:textColor="@color/tvXam"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_mtDangKy" />

            <EditText
                android:id="@+id/activity_registration_et_tendaydu"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="text"
                android:textColorHint="#A09B9B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="LabelFor,SpeakableTextPresentCheck, Autofill" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/activity_registration_sdt"
                android:textColor="@color/tvXam"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_registration_et_tendaydu" />

            <EditText
                android:id="@+id/activity_registration_et_sdt"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="number"
                android:textColorHint="#A09B9B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="LabelFor,SpeakableTextPresentCheck, Autofill" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="566dp">

                <View
                    android:id="@+id/view"
                    android:layout_width="120dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="20dp"
                    android:background="#000000"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/activity_registration_mat_khau"
                    android:textColor="@color/tvXam"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/activity_registration_ed_matkhau"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColorHint="#A09B9B"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,Autofill" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/activity_registration_nhap_lai_mat_khau"
                    android:textColor="@color/tvXam"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration_ed_matkhau" />

                <ImageView
                    android:id="@+id/activity_registration_iv_matan1"
                    android:layout_width="58dp"
                    android:layout_height="61dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/activity_registration_mat_an"
                    app:layout_constraintBottom_toBottomOf="@+id/activity_registration_ed_matkhau"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@mipmap/ic_launcher_eye_hidden_adaptive_fore" />


                <EditText
                    android:id="@+id/activity_registration_ed_nhaplaimatkhau"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColorHint="#A09B9B"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck, Autofill" />

                <ImageView
                    android:id="@+id/activity_registration_iv_matan2"
                    android:layout_width="58dp"
                    android:layout_height="61dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/activity_registration_mat_hien"
                    app:layout_constraintBottom_toBottomOf="@+id/activity_registration_ed_nhaplaimatkhau"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@mipmap/ic_launcher_eye_hidden_adaptive_fore" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="130dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="25dp"
                    android:background="#000000"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <Button
                    android:id="@+id/activity_registration_btn_dangky"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/regis_before"
                    android:enabled="false"
                    android:text="@string/activity_registration_dang_ky"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration_ed_nhaplaimatkhau" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/activity_registration_dieu_khoan"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration_btn_dangky" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="51dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/activity_registration_hoac_la"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/materialToolbar"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape"
                    android:backgroundTint="#BEB9B9"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/materialToolbar2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:backgroundTint="#BEB9B9"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_registration_facebook"
                    app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_registration_gooogle"
                    app:layout_constraintBottom_toBottomOf="@+id/materialToolbar2"
                    app:layout_constraintEnd_toEndOf="@+id/materialToolbar2"
                    app:layout_constraintStart_toStartOf="@+id/materialToolbar2"
                    app:layout_constraintTop_toTopOf="@+id/materialToolbar2" />

                <TextView
                    android:id="@+id/activity_registraion_tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="1dp"
                    android:textColor="@color/regis_error"
                    android:textColorLink="@color/regis_error"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration_ed_nhaplaimatkhau" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>